# src/controllers/orders.ts
@@ -2,27 +2,49 @@ export{}
 const ErrorResponse = require('../utils/errorResponse');
 const asyncHandler = require('../middleware/async');
 const Order = require('../models/Order');
-const Restuarent = require('../models/Restuarent');
+const Restuarant = require('../models/Restuarant');
+const Menu = require('../models/Menu');
+const ObjectID = require('mongodb').ObjectID;
 
 //@desc  Create order
-//@route POST /api/v1/restuarents/:restuarentId/orders
+//@route POST /api/v1/restuarants/:restuarantId/orders/:menuId
 //@access Public
 exports.createOrder = asyncHandler(async (req, res, next) => {
-  req.body.restuarent = req.params.restuarentId;
-  // req.body.user = req.user.id;
-  const restuarent = await Restuarent.findById(req.params.restuarentId);
+  
+ const menuOrdered = await Menu.findOne(
+   {
+     'menu._id':req.params.menuId
+     },
+   { 'menu.$.avgrating': 1 }
+ );
+  
+ req.body = {
+    restuarant: req.params.restuarantId,
+    menu: req.params.menuId,
+    user: req.user.id,
+    order: menuOrdered.menu[0].name,
+    price: menuOrdered.menu[0].price,
+    discount: req.user.offer,
+    deliveryAddress: req.user.address
+ }
+  
+ const price = req.body.price;
+ const discount = req.body.discount;
+ req.body.finalPrice = price - (price * (discount/100));
 
-  if (!restuarent) {
+  const restuarant = await Restuarant.findById(req.params.restuarantId);
+
+  if (!restuarant) {
     return next(
-      new ErrorResponse(`No restuarent with id of ${req.params.restuarentId}`, 404)
+      new ErrorResponse(`No restuarant with id of ${req.params.restuarantId}`, 404)
     );
   }
-
-  const order = await Order.create(req.body);
+  
+  const orders = await Order.create(req.body);
 
   res.status(201).json({
     success: true,
-    data: order
+    data: orders
   });
 });
 
@@ -31,12 +53,20 @@ exports.createOrder = asyncHandler(async (req, res, next) => {
 //@route PUT /api/v1/orders/:orderId
 //@access Public/Private
 exports.updateOrder = asyncHandler(async (req, res, next) => {
+
+  req.body.user = req.user.id;
+
   let order = await Order.findById(req.params.orderId);
 
   if (!order) {
     return next(
       new ErrorResponse(`No order with id of ${req.params.orderId}`, 404)
     );
+  }
+
+  //Make sure order belongs to customer
+  if (order.user.toString() !== req.user.id && req.user.role !== "admin") {
+    return next(new ErrorResponse(`Not authorised to update order`, 401));
   }
 
   order = await Order.findByIdAndUpdate(req.params.orderId, req.body, {
@@ -54,6 +84,9 @@ exports.updateOrder = asyncHandler(async (req, res, next) => {
 //@route DELETE /api/v1/orders/:orderId
 //@access Private/Public(within time)
 exports.deleteOrder = asyncHandler(async (req, res, next) => {
+
+  req.body.user = req.user.id;
+
   const order = await Order.findById(req.params.orderId);
 
   if (!order) {
@@ -62,10 +95,10 @@ exports.deleteOrder = asyncHandler(async (req, res, next) => {
     );
   }
 
-//   //Make sure review belongs to user/admin
-//   if (review.user.toString() !== req.user.id && req.user.role !== "admin") {
-//     return next(new ErrorResponse(`Not authorised to update review`, 401));
-//   }
+//Make sure order belongs to customer
+  if (order.user.toString() !== req.user.id && req.user.role !== "admin") {
+    return next(new ErrorResponse(`Not authorised to delete order`, 401));
+  }
 
   await order.remove();
 
@@ -79,7 +112,8 @@ exports.deleteOrder = asyncHandler(async (req, res, next) => {
 //@route POST /api/v1/orders/reviews/:orderId
 //@access Public
 exports.addReview = asyncHandler(async (req, res, next) => {
-  // req.body.user = req.user.id;
+
+  req.body.user = req.user.id;
 
   let order = await Order.findById(req.params.orderId);
 
@@ -87,6 +121,12 @@ exports.addReview = asyncHandler(async (req, res, next) => {
     return next(
       new ErrorResponse(`No order with id of ${req.params.orderId}`, 404)
     );
+  }
+
+
+//Make sure review belongs to customer
+  if (order.user.toString() !== req.user.id && req.user.role !== "admin") {
+    return next(new ErrorResponse(`Not authorised to add review`, 401));
   }
 
    order = await Order.findByIdAndUpdate(req.params.orderId, req.body, {
@@ -107,6 +147,9 @@ exports.addReview = asyncHandler(async (req, res, next) => {
 //@route PUT /api/v1/orders/reviews/:orderId
 //@access Public
 exports.updateReview = asyncHandler(async (req, res, next) => {
+
+  req.body.user = req.user.id;
+
   let order = await Order.findById(req.params.orderId);
 
   if (!order) {
@@ -115,10 +158,10 @@ exports.updateReview = asyncHandler(async (req, res, next) => {
     );
   }
 
-//   //Make sure review belongs to user/admin
-//   if (review.user.toString() !== req.user.id && req.user.role !== "admin") {
-//     return next(new ErrorResponse(`Not authorised to update review`, 401));
-//   }
+  //Make sure review belongs to customer
+  if (order.user.toString() !== req.user.id && req.user.role !== "admin") {
+    return next(new ErrorResponse(`Not authorised to update review`, 401));
+  }
 
   order = await Order.findByIdAndUpdate(req.params.orderId, req.body, {
     new: true,
@@ -138,6 +181,9 @@ exports.updateReview = asyncHandler(async (req, res, next) => {
 //@route DELETE /api/v1/orders/reviews/:orderId
 //@access Private
 exports.deleteReview = asyncHandler(async (req, res, next) => {
+
+  req.body.user = req.user.id;
+  
   let order = await Order.findById(req.params.orderId);
 
   if (!order) {
@@ -146,10 +192,10 @@ exports.deleteReview = asyncHandler(async (req, res, next) => {
     );
   }
 
-//   //Make sure review belongs to user/admin
-//   if (review.user.toString() !== req.user.id && req.user.role !== "admin") {
-//     return next(new ErrorResponse(`Not authorised to update review`, 401));
-//   }
+//Make sure review belongs to customer
+  if (order.user.toString() !== req.user.id && req.user.role !== "admin") {
+    return next(new ErrorResponse(`Not authorised to delete review`, 401));
+  }
 
   order = await Order.findByIdAndUpdate(
     req.params.orderId,
