# src/route/menus.ts
@@ -3,10 +3,11 @@ import express from 'express';
 const {
   getMenu,
   getFavouriteMenu,
+  createMenu,
   addMenu,
   updateMenu,
   deleteMenu,
-  menuPhotoUpload
+  menuPhotoUpload,
 } = require('../controllers/menus');
 
 const Menu = require('../models/Menu');
@@ -14,25 +15,29 @@ const Menu = require('../models/Menu');
 const router = express.Router({ mergeParams: true });
 
 const advancedResults = require('../middleware/advancedResults');
+const { protect, authorize } = require('../middleware/auth');
 
 router.route('/favourites').get(getFavouriteMenu);
 
-router.route('/:menuId/photo').put(menuPhotoUpload);
+router.route('/:menuId/photo').put(protect, authorize('admin','owner'), menuPhotoUpload);
+
+router.route('/addMenu').post(protect, authorize('admin', 'owner'), addMenu);
 
 router
   .route('/')
   .get(
     advancedResults(Menu, {
-      path: 'restuarent',
-      select: 'name description averageRating'
+      path: 'restuarant',
+      select: 'name description averageRating',
     }),
     getMenu
   )
-  .post(addMenu);
+  .post(protect, authorize('admin', 'owner'), createMenu);
   
 router
   .route('/:menuId')
-  .put(updateMenu)
-  .delete(deleteMenu);
+  .put(protect, authorize('admin', 'owner'), updateMenu)
+  .delete(protect, authorize('admin', 'owner'), deleteMenu);
+
 
 module.exports = router;
